Issue edina/spatial-memories/issues/89: Removed flow-to from text button and added some css to hide current place name offscreen

--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -312,3 +312,12 @@ li.active .saved-records-list-synced-false {
 .ui-disabled {
     opacity:0.4;
 }
+
+.offscreen{
+    position:absolute;
+    left:-10000px;
+    top:auto;
+    width:1px;
+    height:1px;
+    overflow:hidden;
+}
